// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Launchpad's groupIdentifyUser destination action: all fields 1`] = `
Object {
  "$set": Object {
    "group_id": "$WBBWnR",
    "group_testType": "$WBBWnR",
  },
  "anonymoud_id": "$WBBWnR",
  "api_key": "$WBBWnR",
  "distinct_id": "$WBBWnR",
  "event": "$identify",
  "type": "screen",
  "user_id": "$WBBWnR",
}
`;

exports[`Testing snapshot for Launchpad's groupIdentifyUser destination action: required fields 1`] = `
Object {
  "$set": Object {
    "group_id": "$WBBWnR",
  },
  "api_key": "$WBBWnR",
  "event": "$identify",
  "type": "screen",
}
`;
